--- a/index.html
+++ b/index.html
@@ -7,171 +7,129 @@
   <meta name="description" content="Flipania helps house flippers find deals, analyze ARV, and connect with pros. Flip smarter. Profit faster." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    :root { color-scheme: light dark; }
-    html, body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif; }
-    .glass { backdrop-filter: blur(8px); background: rgba(255,255,255,0.75); }
-    @media (prefers-color-scheme: dark) { .glass { background: rgba(17,24,39,0.75); } }
+    html, body { font-family: 'Inter', sans-serif; }
+    .hero-bg {
+      background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)), 
+                  url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1500&q=80');
+      background-size: cover;
+      background-position: center;
+    }
   </style>
 </head>
-<body class="bg-slate-50 text-slate-800 dark:bg-slate-900 dark:text-slate-100">
+<body class="bg-gray-50 text-gray-800">
+
   <!-- NAV -->
-  <header class="sticky top-0 z-30">
+  <header class="bg-white/90 backdrop-blur-md sticky top-0 z-30 shadow">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 items-center justify-between">
         <a href="#" class="flex items-center gap-2">
-          <div class="h-9 w-9 rounded-2xl bg-emerald-500 shadow-md"></div>
-          <span class="text-xl font-extrabold tracking-tight">Flipania</span>
+          <img src="logo.png" alt="Flipania logo" class="h-10 w-auto">
         </a>
         <nav class="hidden md:flex items-center gap-8 text-sm font-medium">
           <a href="#features" class="hover:text-emerald-600">Features</a>
           <a href="#how" class="hover:text-emerald-600">How it works</a>
-          <a href="#cta" class="hover:text-emerald-600">Join waitlist</a>
+          <a href="#cta" class="hover:text-emerald-600">Get Started</a>
         </nav>
       </div>
     </div>
   </header>
 
   <!-- HERO -->
-  <section class="relative overflow-hidden">
-    <div class="absolute inset-0 -z-10 bg-gradient-to-br from-emerald-200 via-white to-emerald-100 opacity-60 dark:from-emerald-900/40 dark:via-slate-900 dark:to-emerald-800/20"></div>
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-20">
-      <div class="grid items-center gap-10 md:grid-cols-2">
-        <div>
-          <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">
-            Flip smarter. <span class="text-emerald-600">Profit faster.</span>
-          </h1>
-          <p class="mt-4 text-lg text-slate-600 dark:text-slate-300">
-            Flipania is the all-in-one hub for house flippers—find deals, estimate ARV, plan rehabs, and connect with pros.
-          </p>
-          <form id="waitlist" class="mt-8 flex flex-col sm:flex-row gap-3" onsubmit="return captureEmail(event)">
-            <input type="email" id="email" required placeholder="Enter your email"
-                   class="w-full sm:w-96 rounded-xl border border-slate-300 bg-white/80 px-4 py-3 text-base shadow-sm outline-none focus:border-emerald-500 focus:ring-2 focus:ring-emerald-500/30 dark:bg-slate-800 dark:border-slate-700" />
-            <button class="inline-flex items-center justify-center rounded-xl bg-emerald-600 px-6 py-3 text-white font-semibold shadow-sm hover:bg-emerald-700 active:scale-[.99]">
-              Join the waitlist
-            </button>
-          </form>
-          <p id="note" class="mt-3 text-sm text-slate-500 dark:text-slate-400">No spam. Unsubscribe anytime.</p>
-        </div>
-        <div class="glass rounded-3xl border border-slate-200 dark:border-slate-700 p-6 shadow-2xl">
-          <div class="grid grid-cols-2 gap-4">
-            <div class="rounded-2xl bg-white/70 dark:bg-slate-800 p-5 shadow">
-              <p class="text-sm text-slate-500">Tool</p>
-              <p class="mt-1 font-semibold">ARV Calculator</p>
-              <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">Estimate After Repair Value in seconds.</p>
-            </div>
-            <div class="rounded-2xl bg-white/70 dark:bg-slate-800 p-5 shadow">
-              <p class="text-sm text-slate-500">Deals</p>
-              <p class="mt-1 font-semibold">Flip‑Ready Listings</p>
-              <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">Curated foreclosures & auctions.</p>
-            </div>
-            <div class="rounded-2xl bg-white/70 dark:bg-slate-800 p-5 shadow">
-              <p class="text-sm text-slate-500">Network</p>
-              <p class="mt-1 font-semibold">Vetted Pros</p>
-              <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">Contractors, lenders, wholesalers.</p>
-            </div>
-            <div class="rounded-2xl bg-white/70 dark:bg-slate-800 p-5 shadow">
-              <p class="text-sm text-slate-500">Insights</p>
-              <p class="mt-1 font-semibold">ROI by Zip</p>
-              <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">See where flips perform.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+  <section class="hero-bg text-white py-28">
+    <div class="mx-auto max-w-5xl px-4 text-center">
+      <h1 class="text-5xl font-extrabold leading-tight">
+        Flip Smarter. <span class="text-emerald-400">Profit Faster.</span>
+      </h1>
+      <p class="mt-6 text-lg text-gray-200">
+        The all-in-one hub for house flippers — discover deals, estimate ARV, plan rehabs, and connect with trusted pros.
+      </p>
+      <form class="mt-8 flex flex-col sm:flex-row justify-center gap-3" onsubmit="return captureEmail(event)">
+        <input type="email" required placeholder="Enter your email" 
+               class="w-full sm:w-96 rounded-lg border px-4 py-3 text-gray-800 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-400" />
+        <button class="rounded-lg bg-emerald-500 px-6 py-3 text-white font-semibold shadow hover:bg-emerald-600">
+          Join Waitlist
+        </button>
+      </form>
     </div>
   </section>
 
   <!-- FEATURES -->
-  <section id="features" class="py-16">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <div class="grid gap-8 md:grid-cols-3">
-        <div class="rounded-2xl border border-slate-200 dark:border-slate-700 p-6 bg-white/70 dark:bg-slate-800 shadow">
-          <h3 class="text-lg font-semibold">ARV & Rehab in minutes</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Comparable sales, repair budget templates, and profit models—all in one place.</p>
+  <section id="features" class="py-20">
+    <div class="mx-auto max-w-7xl px-4">
+      <h2 class="text-3xl font-bold text-center">Why Flipania?</h2>
+      <div class="mt-12 grid gap-8 md:grid-cols-3">
+        <div class="rounded-xl bg-white shadow p-6 text-center">
+          <div class="text-emerald-500 text-4xl mb-4">🏠</div>
+          <h3 class="font-semibold text-lg">Smart ARV Calculator</h3>
+          <p class="mt-2 text-gray-600">Instantly estimate After Repair Value and project your profits with real comps.</p>
         </div>
-        <div class="rounded-2xl border border-slate-200 dark:border-slate-700 p-6 bg-white/70 dark:bg-slate-800 shadow">
-          <h3 class="text-lg font-semibold">Curated flip deals</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Foreclosures, auctions, and off‑market leads, filtered for investor margins.</p>
+        <div class="rounded-xl bg-white shadow p-6 text-center">
+          <div class="text-emerald-500 text-4xl mb-4">📊</div>
+          <h3 class="font-semibold text-lg">Curated Flip Deals</h3>
+          <p class="mt-2 text-gray-600">Find foreclosures, auctions, and off-market leads tailored for house flippers.</p>
         </div>
-        <div class="rounded-2xl border border-slate-200 dark:border-slate-700 p-6 bg-white/70 dark:bg-slate-800 shadow">
-          <h3 class="text-lg font-semibold">Trusted pro network</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Find and vet contractors, lenders, stagers, and more—by reviews and performance.</p>
+        <div class="rounded-xl bg-white shadow p-6 text-center">
+          <div class="text-emerald-500 text-4xl mb-4">🤝</div>
+          <h3 class="font-semibold text-lg">Trusted Network</h3>
+          <p class="mt-2 text-gray-600">Connect with vetted contractors, lenders, and wholesalers to execute with confidence.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- HOW IT WORKS -->
-  <section id="how" class="py-6">
-    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8 text-center">
-      <h2 class="text-2xl font-bold">How Flipania works</h2>
-      <div class="mt-8 grid gap-6 md:grid-cols-3 text-left">
-        <div class="rounded-2xl border border-slate-200 dark:border-slate-700 p-6 bg-white/70 dark:bg-slate-800">
-          <span class="text-sm font-semibold text-emerald-600">1</span>
-          <h3 class="mt-1 font-semibold">Find potential flips</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Browse curated deals or add your own leads to evaluate.</p>
+  <section id="how" class="bg-gray-100 py-20">
+    <div class="mx-auto max-w-5xl px-4 text-center">
+      <h2 class="text-3xl font-bold">How It Works</h2>
+      <div class="mt-10 grid gap-8 md:grid-cols-3 text-left">
+        <div class="bg-white rounded-xl shadow p-6">
+          <h3 class="font-semibold text-lg">1. Find Deals</h3>
+          <p class="mt-2 text-gray-600">Browse curated listings or add your own leads to analyze potential flips.</p>
         </div>
-        <div class="rounded-2xl border border-slate-200 dark:border-slate-700 p-6 bg-white/70 dark:bg-slate-800">
-          <span class="text-sm font-semibold text-emerald-600">2</span>
-          <h3 class="mt-1 font-semibold">Analyze ARV & rehab</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Use comps, cost templates, and ROI calculators to de‑risk the flip.</p>
+        <div class="bg-white rounded-xl shadow p-6">
+          <h3 class="font-semibold text-lg">2. Analyze</h3>
+          <p class="mt-2 text-gray-600">Use Flipania tools to estimate ARV, budget repairs, and calculate ROI.</p>
         </div>
-        <div class="rounded-2xl border border-slate-200 dark:border-slate-700 p-6 bg-white/70 dark:bg-slate-800">
-          <span class="text-sm font-semibold text-emerald-600">3</span>
-          <h3 class="mt-1 font-semibold">Connect & execute</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Hire vetted pros, secure lending, and track progress to exit.</p>
+        <div class="bg-white rounded-xl shadow p-6">
+          <h3 class="font-semibold text-lg">3. Execute</h3>
+          <p class="mt-2 text-gray-600">Hire trusted pros, secure lending, and flip with less risk and more confidence.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- CTA -->
-  <section id="cta" class="py-20">
-    <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 text-center">
+  <section id="cta" class="py-20 text-center bg-emerald-600 text-white">
+    <div class="mx-auto max-w-3xl px-4">
       <h2 class="text-3xl font-extrabold">Be first to access Flipania</h2>
-      <p class="mt-2 text-slate-600 dark:text-slate-300">Join the early access list and help shape the tools you want.</p>
-      <form class="mt-6 flex flex-col sm:flex-row gap-3 justify-center" onsubmit="return captureEmail(event)">
-        <input type="email" required placeholder="you@domain.com" class="w-full sm:w-96 rounded-xl border border-slate-300 bg-white/80 px-4 py-3 text-base shadow-sm outline-none focus:border-emerald-500 focus:ring-2 focus:ring-emerald-500/30 dark:bg-slate-800 dark:border-slate-700">
-        <button class="inline-flex items-center justify-center rounded-xl bg-emerald-600 px-6 py-3 text-white font-semibold shadow-sm hover:bg-emerald-700">Join waitlist</button>
+      <p class="mt-3">Join the early access list and help shape the tools you want.</p>
+      <form class="mt-6 flex flex-col sm:flex-row justify-center gap-3" onsubmit="return captureEmail(event)">
+        <input type="email" required placeholder="you@domain.com" 
+               class="w-full sm:w-96 rounded-lg border px-4 py-3 text-gray-800 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-400" />
+        <button class="rounded-lg bg-white px-6 py-3 text-emerald-600 font-semibold shadow hover:bg-gray-100">
+          Join Waitlist
+        </button>
       </form>
-      <p class="mt-3 text-xs text-slate-500">We’ll never sell your email.</p>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="py-10 border-t border-slate-200 dark:border-slate-800">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm flex flex-col md:flex-row items-center justify-between gap-3">
-      <p>© <span id="year"></span> Flipania. All rights reserved.</p>
-      <div class="flex items-center gap-5">
-        <a href="#" class="hover:text-emerald-600">Privacy</a>
-        <a href="#" class="hover:text-emerald-600">Terms</a>
-        <a href="mailto:hello@flipania.com" class="hover:text-emerald-600">Contact</a>
-      </div>
-    </div>
+  <footer class="py-8 bg-gray-900 text-gray-400 text-sm text-center">
+    <p>© <span id="year"></span> Flipania. All rights reserved.</p>
   </footer>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // TEMP: capture email to localStorage (replace with Formspree, Beehiiv, Mailchimp, or your API later)
     function captureEmail(e){
       e.preventDefault();
-      var emailInputs = e.target.querySelectorAll('input[type="email"]');
-      var email = emailInputs[0]?.value || '';
-      if(!email) return false;
-      try{
-        const key = 'flipania_waitlist';
-        const list = JSON.parse(localStorage.getItem(key) || '[]');
-        list.push({ email, ts: Date.now() });
-        localStorage.setItem(key, JSON.stringify(list));
-        document.getElementById('note').textContent = 'Added! We\'ll be in touch.';
-        e.target.reset();
-        alert('Thanks! You\'re on the list.');
-      }catch(err){ console.error(err); }
+      alert("Thanks! You're on the waitlist.");
+      e.target.reset();
       return false;
     }
   </script>
+
 </body>
 </html>
