--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <!-- NAV -->
   <header class="bg-white/90 backdrop-blur-md sticky top-0 z-30 shadow">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <div class="flex h-16 items-center justify-between">
+      <div class="flex h-20 items-center justify-between">
         <a href="#" class="flex items-center gap-2">
-          <img src="logo.png" alt="Flipania logo" class="h-10 w-auto">
+          <img src="logo.png" alt="Flipania logo" class="h-14 w-auto md:h-16">
         </a>
         <nav class="hidden md:flex items-center gap-8 text-sm font-medium">
           <a href="#features" class="hover:text-emerald-600">Features</a>
@@ -40,6 +40,9 @@
   <!-- HERO -->
   <section class="hero-bg text-white py-28">
     <div class="mx-auto max-w-5xl px-4 text-center">
+      <div class="flex justify-center mb-6">
+        <img src="logo.png" alt="Flipania logo" class="h-24 w-auto md:h-28">
+      </div>
       <h1 class="text-5xl font-extrabold leading-tight">
         Flip Smarter. <span class="text-emerald-400">Profit Faster.</span>
       </h1>
