--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
           Join Waitlist
         </button>
       </form>
+      <div class="mt-6">
+        <button onclick="openModal()" class="rounded-lg bg-emerald-500 px-6 py-3 text-white font-semibold shadow hover:bg-emerald-600">
+          Try ARV Calculator
+        </button>
+      </div>
     </div>
   </section>
 
@@ -124,6 +129,42 @@
     <p>© <span id="year"></span> Flipania. All rights reserved.</p>
   </footer>
 
+  <!-- ARV CALCULATOR MODAL -->
+  <div id="arvModal" class="fixed inset-0 z-50 hidden bg-black/60 flex items-center justify-center p-4">
+    <div class="bg-white rounded-xl shadow-2xl w-full max-w-lg p-6 relative">
+      <button onclick="closeModal()" class="absolute top-3 right-3 text-gray-400 hover:text-gray-600">✖</button>
+      <h2 class="text-2xl font-bold mb-6 text-center">ARV Calculator</h2>
+      
+      <form id="arvForm" class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium">Purchase Price ($)</label>
+          <input type="number" id="purchase" required class="mt-1 w-full rounded-lg border px-3 py-2 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-400">
+        </div>
+        <div>
+          <label class="block text-sm font-medium">Repair Cost ($)</label>
+          <input type="number" id="repairs" required class="mt-1 w-full rounded-lg border px-3 py-2 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-400">
+        </div>
+        <div>
+          <label class="block text-sm font-medium">After Repair Value (ARV) ($)</label>
+          <input type="number" id="arv" required class="mt-1 w-full rounded-lg border px-3 py-2 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-400">
+        </div>
+        <div>
+          <label class="block text-sm font-medium">Holding & Other Costs ($)</label>
+          <input type="number" id="holding" value="0" class="mt-1 w-full rounded-lg border px-3 py-2 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-400">
+        </div>
+        <button type="submit" class="w-full bg-emerald-600 text-white rounded-lg px-4 py-3 font-semibold hover:bg-emerald-700">Calculate</button>
+      </form>
+
+      <!-- RESULTS -->
+      <div id="results" class="mt-6 hidden">
+        <h3 class="text-lg font-semibold">Results</h3>
+        <p id="total" class="mt-2"></p>
+        <p id="profit"></p>
+        <p id="roi"></p>
+      </div>
+    </div>
+  </div>
+
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
     function captureEmail(e){
@@ -132,6 +173,25 @@
       e.target.reset();
       return false;
     }
+    function openModal(){ document.getElementById('arvModal').classList.remove('hidden'); }
+    function closeModal(){ document.getElementById('arvModal').classList.add('hidden'); }
+
+    document.getElementById('arvForm').addEventListener('submit', function(e){
+      e.preventDefault();
+      let purchase = parseFloat(document.getElementById('purchase').value);
+      let repairs = parseFloat(document.getElementById('repairs').value);
+      let arv = parseFloat(document.getElementById('arv').value);
+      let holding = parseFloat(document.getElementById('holding').value) || 0;
+
+      let totalInvestment = purchase + repairs + holding;
+      let profit = arv - totalInvestment;
+      let roi = ((profit / totalInvestment) * 100).toFixed(2);
+
+      document.getElementById('results').classList.remove('hidden');
+      document.getElementById('total').textContent = `Total Investment: $${totalInvestment.toLocaleString()}`;
+      document.getElementById('profit').textContent = `Projected Profit: $${profit.toLocaleString()}`;
+      document.getElementById('roi').textContent = `ROI: ${roi}%`;
+    });
   </script>
 
 </body>
